<resources>
    <string name="app_name">Alonias</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up_select">Don\'t have an account? Sign up</string>
    <string name="Title">ALONIAS</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="alonias">ALONIAS</string>
    <string name="round_time_seconds">ROUND TIME (SECONDS)</string>
    <string name="difficulty">DIFFICULTY</string>
    <string name="players">PLAYERS</string>
    <string name="create_room">CREATE ROOM</string>
    <string name="singleplayer">SINGLEPLAYER</string>
    <string name="main">MAIN</string>
    <string name="join_room">JOIN ROOM</string>
    <string name="room_name">ROOM NAME</string>
    <string name="skip">skip</string>
    <string name="correct">correct</string>
    <string name="nothing">———</string>
    <string name="score">Score:</string>
    <string name="time">00:00</string>
    <string name="spectator">Spectator</string>
    <string name="room">ROOM:</string>
    <string name="other_team_s_turn">Other Team\'s turn</string>
    <string name="team_a">Team A:</string>
    <string name="team_b">Team B:</string>
    <string name="Spectator_Hint">Spectator mode: you can\'t guess or see the word.</string>
    <string name="exit">EXIT</string>
    <string name="mute">MUTE</string>
    <string name="guesser">Guesser</string>
    <string name="write_your_attempt">Write your attempt:</string>
    <string name="your_guess">Your Guess..</string>
    <string name="send">SEND</string>
    <string name="end_game">End Game</string>
    <string name="results">RESULTS</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="back_to_menu">BACK TO MENU</string>
    <string name="explainer">Explainer</string>
    <string name="word">WORD</string>
    <string name="explainer_hint">Do not say the word or any derivatives thereof.</string>
    <string name="lobby">LOBBY</string>
    <string name="waiting">WAITING</string>
    <string name="start_host">START (HOST)</string>
    <string name="your_turn">" • YOUR TURN"</string>
    <string name="not_your_turn">" • NOT YOUR TURN"</string>
    <string name="unmute_voice">UNMUTE VOICE</string>
    <string name="mute_voice">MUTE VOICE</string>
    <string name="turn">"TURN: "</string>
    <string name="explaining">" (EXPLAINING)"</string>
</resources>