<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ng_card_red_black">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/bg_card_red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            android:text="@string/alonias"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="40"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_name"
            android:textColor="#FFB4B4"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/etRoomName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input"
            android:hint="@string/room_name"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textColor="#FFB4B4"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input"
            android:hint="@string/Password"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:paddingHorizontal="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/round_time_seconds"
            android:textColor="#FFB4B4"
            android:textSize="13sp"/>

        <Spinner
            android:id="@+id/spRoundTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input"
            android:layout_marginBottom="16dp"/>

        <!-- DIFFICULTY -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textColor="#FFB4B4"
            android:textSize="13sp"/>

        <Spinner
            android:id="@+id/spDifficulty"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input"
            android:layout_marginBottom="16dp"
            />

        <!-- PLAYERS -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players"
            android:textColor="#FFB4B4"
            android:textSize="13sp"/>


        <Spinner
            android:id="@+id/spPlayers"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateRoom"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/create_room"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@drawable/bg_button_red"
            app:backgroundTint="@null"
            app:rippleColor="@android:color/transparent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
