<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ng_card_red_black">

    <!-- MAIN CARD -->
    <LinearLayout
        android:id="@+id/homeCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/bg_card_red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75">

        <TextView
            android:id="@+id/tvTitleHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alonias"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            android:letterSpacing="0.15"
            android:fontFamily="@font/planet_jumbo"
            android:paddingBottom="16dp"
            android:shadowColor="@color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="40"/>

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:textSize="14sp"
            android:textColor="#FFB4B4"
            android:gravity="center"
            android:paddingBottom="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSingle"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/singleplayer"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="14dp"
            android:background="@drawable/bg_button_red"
            app:backgroundTint="@null"
            app:rippleColor="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMulti"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/create_room"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginBottom="14dp"
            android:background="@drawable/bg_button_red"
            app:backgroundTint="@null"
            app:rippleColor="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnJoin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/join_room"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@drawable/bg_button_red"
            app:backgroundTint="@null"
            app:rippleColor="@android:color/transparent"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
