<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ng_card_red_black">

    <!-- CARD -->
    <LinearLayout
        android:id="@+id/loginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/bg_card_red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <!-- TITLE -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:shadowColor="@color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="40"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:letterSpacing="0.15"
            android:fontFamily="@font/planet_jumbo"
            android:paddingBottom="24dp"/>

        <!-- USERNAME -->
        <EditText
            android:id="@+id/etUsername"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Username"
            android:background="@drawable/bg_input"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:paddingHorizontal="16dp"
            android:fontFamily=""/>

        <!-- PASSWORD -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:background="@drawable/bg_input"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:paddingHorizontal="16dp"/>

        <!-- CONFIRM PASSWORD (Signup) -->
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:background="@drawable/bg_input"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:paddingHorizontal="16dp"
            android:visibility="gone"/>

        <!-- ERROR MESSAGE -->
        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF5252"
            android:textSize="14sp"
            android:gravity="center"
            android:paddingTop="12dp"
            android:visibility="gone"/>

        <!-- LOGIN BUTTON -->


        <!-- SWITCH MODE -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_red"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:rippleColor="@android:color/transparent" />

        <TextView
            android:id="@+id/tvSwitchMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/sign_up_select"
            android:textColor="#FF8A80"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
